Fixes send button text alignment

--- a/public/style.css
+++ b/public/style.css
@@ -892,7 +892,6 @@ div.hand.twelve-cards img {
     margin: 2px;
     margin-top: 10px;
     height: 30px;
-    line-height: 30px;
     border-radius: 0px 15px 15px 0px;
     text-align: center;
     vertical-align: center;
